# JSO-Backend

./: .flake8  .gitignore  README.md  pyproject.toml
src/jso_backend/: main.py
src/jso_backend/api/converters/: job_converter.py  process_steps_converter.py
src/jso_backend/api/models/: job_api_model.py  process_step_api_model.py
src/jso_backend/api/routers/: job_router.py
src/jso_backend/api_models/: job_dto.py
src/jso_backend/business_logic/: job_entity.py  job_process.py  process_step.py
src/jso_backend/business_logic/logic/: job_logic.py
src/jso_backend/business_logic/services/: job_service.py
src/jso_backend/business_logic/validators/: job_validator.py  process_steps_validator.py
src/jso_backend/common/: job_status_type.py
src/jso_backend/data_access/: database_manager.py  job_data_access.py  unit_of_work.py
src/jso_backend/data_access/converters/: job_converter.py  process_step_converter.py
src/jso_backend/data_access/dal_interfaces/: job_data_access_interface.py
src/jso_backend/domain/: job_entity.py  job_process.py  process_step_entity.py  step_type.py
src/jso_backend/domain/exceptions/: invalid_job_details_exception.py  job_not_found_exception.py
src/jso_backend/models/: attachment_model.py  interview_model.py  job_info_model.py  job_model.py  network_connection_model.py  process_step_model.py  question_and_answer_model.py  todo_model.py  user_model.py
src/jso_backend/routers/: jobs_router.py
