[tool.poetry]
name = "jso-backend"
version = "0.1.0"
description = ""
authors = ["Yael Davidov <yael.davidov97@gmail.com>"]
readme = "README.md"
packages = [{include = "jso_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
