[tool.poetry]
name = "jso-backend"
version = "0.1.0"
description = ""
authors = ["Yael Davidov <yael.davidov97@gmail.com>"]
readme = "README.md"
packages = [{include = "jso_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pyright = "^1.1.315"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.vscode
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"